# openff-utilities

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: CI.yaml  ci.yaml  ci_pixi.yaml  lint.yaml
devtools/conda-envs/: test_env.yaml
devtools/pixi-envs/: test_env.toml
devtools/scripts/: assert_ambertools_found.py  assert_openeye_not_found.py
docs/: README.md  conf.py  getting_started.rst  index.rst  releasehistory.md
docs/_static/: README.md
docs/_templates/: README.md
openff/: __init__.py  utilities.py
openff/utilities/: __init__.py  _version.py  exceptions.py  provenance.py  testing.py  utilities.py  utils.py
openff/utilities/_tests/: test_exceptions.py  test_provenance.py  test_star_import.py  test_testing_utilities.py  test_utilities.py
openff/utilities/_tests/tests/: test_utilities.py
openff/utilities/tests/: test_exceptions.py  test_provenance.py  test_testing_utilities.py  test_testing_utils.py  test_utilities.py  test_utils.py
