[build-system]
requires = [
    "setuptools",
    "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "openff-utilities"
description = "A collection of miscellaneous utility functions used throughout the OpenFF stack"
readme = "README.md"
authors = [{name = "Open Force Field Initiative", email = "info@openforcefield.org"}]
license = {text = "MIT"}
dynamic = ["version"]
requires-python = ">= 3.11"

[tool.setuptools.packages]
find = {}

[tool.versioningit]

[tool.ruff]
line-length = 119
namespace-packages = ["openff/utilities/"]

[tool.ruff.lint]
select = ["F", "E", "W", "NPY", "UP", "RUF", "I"]

[tool.ruff.lint.per-file-ignores]
"openff/utilities/__init__.py" = ["F401"]

[tool.mypy]
exclude="openff/utilities/_tests"
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
strict = true

[tool.pytest.ini_options]
markers = [
    "leaky: run leaky tests",
]
addopts = "--cov=openff/utilities --cov-report=xml -m \"not leaky\""

[tool.coverage.run]
omit = [
    "*/*/_tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.pixi.project]
channels = ["conda-forge", "openeye"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
python = "*"
pip = "*"
versioningit = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-randomly = "*"
nbval = "*"
mypy = "*"
types-setuptools = "*"
types-toml = "*"

[tool.pixi.pypi-dependencies]
openff-utilities = { path = ".", editable = true }

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
py311 = ["py311"]
py312 = ["py312"]
