[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools>=77.0.3",
  "versioningit",
]

[project]
name = "openff-utilities"
description = "A collection of miscellaneous utility functions used throughout the OpenFF stack"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Open Force Field Initiative", email = "info@openforcefield.org" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

[tool.setuptools.packages]
find = {}

[tool.ruff]
line-length = 119
namespace-packages = [ "openff/utilities/" ]

lint.select = [ "E", "F", "I", "NPY", "RUF", "UP", "W" ]
lint.per-file-ignores."openff/utilities/__init__.py" = [ "F401" ]

[tool.pytest.ini_options]
markers = [
  "leaky: run leaky tests",
]
addopts = "--cov=openff/utilities --cov-report=xml -m \"not leaky\""

[tool.coverage.run]
omit = [
  "*/*/_tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]

[tool.mypy]
exclude = "openff/utilities/_tests"
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
strict = true

[tool.versioningit]

[tool.pixi.project]
channels = [ "conda-forge", "openeye" ]
platforms = [ "linux-64", "osx-64", "osx-arm64" ]

[tool.pixi.dependencies]
python = "*"
pip = "*"
versioningit = "*"
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-randomly = "*"
nbval = "*"
mypy = "*"
types-setuptools = "*"
types-toml = "*"

[tool.pixi.pypi-dependencies]
openff-utilities = { path = ".", editable = true }

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
py311 = [ "py311" ]
py312 = [ "py312" ]
