[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=77.0.3",
  "setuptools-scm>=8",
]

[project]
name = "openff-utilities"
description = "A collection of miscellaneous utility functions used throughout the OpenFF stack"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Open Force Field Initiative", email = "info@openforcefield.org" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0"

[tool.ruff]
target-version = "py312"
line-length = 119
namespace-packages = [ "openff/utilities/" ]

lint.select = [ "E", "F", "I", "NPY", "RUF", "UP", "W" ]
lint.per-file-ignores."openff/utilities/__init__.py" = [ "F401" ]

[tool.pytest.ini_options]
markers = [
  "leaky: run leaky tests",
]
addopts = "--cov=openff/utilities --cov-report=xml -m \"not leaky\""

[tool.coverage.run]
omit = [
  "*/*/_tests/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]

[tool.mypy]
exclude = "openff/utilities/_tests"
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
strict = true

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-arm64" ]

[tool.pixi.tasks]
run_tests = { cmd = "pytest $COV openff/utilities/_tests/ -m leaky && pixi run pytest $COV openff/utilities/_tests/ -m 'not leaky'" }
run_edge_case = { cmd = "pytest $COV openff/utilities/_tests/test_utilities.py::test_requires_oe_module_installed_missing_license" }
run_mypy = { cmd = "python -m mypy -p 'openff.utilities'" }

[tool.pixi.dependencies]
python = "*"
pip = "*"

[tool.pixi.pypi-dependencies]
openff-utilities = { path = ".", editable = true }

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-randomly = "*"

[tool.pixi.feature.typing.dependencies]
mypy = "*"
pytest = "*"
types-setuptools = "*"
types-toml = "*"

[tool.pixi.feature.openeye]
channels = [ "openeye" ]
dependencies = { openeye-toolkits = "*" }

[tool.pixi.feature.ambertools.dependencies]
ambertools = "*"
numpy = "2.2.*"  # ParmEd bugs

[tool.pixi.feature.dev.pypi-dependencies]
pre-commit = "*"
ipdb = "*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
py312 = [ "py312", "test" ]
py313 = [ "py313", "test" ]
py314 = [ "py314", "test" ]
py312-openeye = [ "py312", "test", "openeye" ]
py313-openeye = [ "py313", "test", "openeye" ]
py312-ambertools = [ "py312", "test", "ambertools" ]
py313-ambertools = [ "py313", "test", "ambertools" ]
py312-openeye-ambertools = [ "py312", "test", "ambertools", "openeye" ]
py313-openeye-ambertools = [ "py313", "test", "ambertools", "openeye" ]
dev = [ "py313", "dev" ]
typing = [ "py313", "typing" ]
